Only selects as migratable VMs (Vms which are eligible for migration) those ones which are already created.
Signed-off-by: Manoel Campos <manoelcampos@gmail.com>